Update 'o6j2fsw7p-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c08eae1baf.fc81.p3.openshiftapps.com/rhtap/rhtap-qe:d89c864c398a7cf2bdb535e6820e463c47778723@sha256:dc261fec76071994e99e1484d9164cfd50e2910e0ad3fb4c74f51c66c6db5915

--- a/components/o6j2fsw7p-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/o6j2fsw7p-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: o6j2fsw7p-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c08eae1baf.fc81.p3.openshiftapps.com/rhtap/rhtap-qe:d89c864c398a7cf2bdb535e6820e463c47778723@sha256:dc261fec76071994e99e1484d9164cfd50e2910e0ad3fb4c74f51c66c6db5915
+          name: container-image
